# Atlasgdp

./: .dockerignore  AUDIT_REPORT.md  Dockerfile  MODEL_CARD.md  Makefile  README.md  docker-compose.yml  pyproject.toml  render.yaml
.github/workflows/: ci.yml
app/: streamlit_app.py
artifacts/: atlas_gdp.db  atlas_gdp.sqlite3  atlas_gdp_bundle.joblib  latest_manifest.json  latest_run_id.txt
artifacts/latest/: drivers_BRA.json  drivers_current.csv  forecast_BRA.json  latest_forecast_frame.parquet  world_snapshot.csv
artifacts/reports/: drivers_current.csv  drivers_delta.csv  metrics.json
artifacts/runs/20260303T192026Z_UKUC/: atlas_gdp_bundle.joblib  data_lineage.json  drivers_BRA.json  (+6 more)
data/processed/: annual_panel.parquet  bea_components.parquet  panel.parquet
data/samples/: offline_macro.csv
notebooks/: 01_baseline_world_bank_panel.ipynb  02_nowcast_demo.ipynb
scripts/: backtest.py  build_dataset.py  demo.sh  demo_flow.sh  forecast.py  make_demo_bundle.py  train.py
src/atlas_gdp/: __init__.py  cli.py  config.py  logging_utils.py  settings.py
tests/: test_asof_blocks_future_months.py  test_asof_features.py  test_asof_split_nonempty.py  test_backtest_no_future_leakage.py  test_backtest_walk_forward_shapes.py  test_cache_roundtrip.py  test_manifest_prevents_stale_countries.py  test_manifest_schema.py  test_mixed_frequency_quarterly_alignment.py  test_offline_mode_blocks_network.py  test_pipeline_integrity.py  test_run_registry.py  test_settings_loading.py  test_target_no_cross_country_leakage.py  test_train_report_schema.py  test_wb_fetch.py
(+102 files in other folders)
